archive/vault/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: ingress-nginx
spec:
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: vault
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: arm64
      imagePullSecrets:
        - name: docker-reg-secret
      containers:
        - name: vault
          image: "docker.ttys0.net/vault-arm64:0.10.3"
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          command: ["vault", "server"]
          args:
            - "-config=/vault/config/vault.hcl"
          volumeMounts:
            - name: config
              mountPath: /vault/config
            - name: data
              mountPath: /vault/data
            - name: log
              mountPath: /vault/log
          ports:
            - containerPort: 8200
              name: server
      volumes:
        - name: config
          configMap:
            name: vault-hcl
        - name: data
          persistentVolumeClaim:
            claimName: vault-data
        - name: log
          persistentVolumeClaim:
            claimName: vault-log
