archive/vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: ingress-nginx
  labels:
    name: vault
spec:
  ports:
    - name: server
      port: 8200
      targetPort: 8200
  selector:
    app: vault
