archive/vault/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault-ttys0.net
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "vault.ttys0.net"
      http:
        paths:
          - path: /
            backend:
              serviceName: vault
              servicePort: 8200
